mongodb-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-exporter
  labels:
    app: mongodb-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-exporter
  template:
    metadata:
      labels:
        app: mongodb-exporter
    spec:
      containers:
      - name: mongodb-exporter
        image: bitnami/mongodb-exporter:latest
        args:
          - "--mongodb.uri=mongodb://<user>:<pass>@mongodb-service:27017/admin"
        ports:
        - containerPort: 9216
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-exporter
  labels:
    app: mongodb-exporter   # must match ServiceMonitor selector
spec:
  selector:
    app: mongodb-exporter   # matches pod labels in Deployment
  ports:
    - name: http-metrics     # named port is required
      port: 9216             # Service port
      targetPort: 9216       # Container port
