ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: myapp.local     # (Optional in Minikube, path-based routing will still work)

      http:
        paths:
          # Frontend (React / Nginx)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          # Backend (NodeJS / Webapp API)
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: webapp-service
                port:
                  number: 3000
